services/wiki/kubernetes/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiki-ingress
  namespace: wetfish-dev
  labels:
    app: wiki
    component: mediawiki
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: "default-headers@kubernetescrd"
spec:
  tls:
  - hosts:
    - wiki.wetfish.local
    secretName: wiki-tls
  rules:
  - host: wiki.wetfish.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wiki
            port:
              number: 80
