services/wiki/kubernetes/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiki-ingress
  namespace: wetfish-dev
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  ingressClassName: traefik
  rules:
  - host: wiki.wetfish.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wiki-web
            port:
              number: 80
